--- a/SmileBoyClient/Views/Tabs/ProductTab.xaml
+++ b/SmileBoyClient/Views/Tabs/ProductTab.xaml
@@ -4,14 +4,15 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      xmlns:local="clr-namespace:SmileBoyClient.Views.Tabs" 
-      xmlns:smileboy="clr-namespace:SmileBoyClient"
+      xmlns:local="clr-namespace:SmileBoyClient.Views.Controls" 
+      xmlns:smileboy="clr-namespace:SmileBoyClient.Converter"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ProductTab"
       DataContext="{Binding ProductTab, Source={StaticResource ViewModelLocator}}">
 
     <Page.Resources>
+        <smileboy:ImageConverter x:Key="ImageConverter"/>
     </Page.Resources>
 
     <Grid>
@@ -184,8 +185,9 @@
                     </ListView.View>
                 </ListView>
 
-                <StackPanel Grid.Row="2" Margin="25,0,25,0"
-                            Orientation="Horizontal" Grid.ColumnSpan="2">
+                <StackPanel Grid.Row="2" Margin="25,45,25,0"
+                            Orientation="Horizontal" HorizontalAlignment="Right" Grid.ColumnSpan="2">
+                    <local:PaginationControl DataContext="{Binding Pagination}"/>
                 </StackPanel>
             </Grid>
         </Border>
