--- a/SmileBoyClient/Views/Tabs/SettingTab.xaml
+++ b/SmileBoyClient/Views/Tabs/SettingTab.xaml
@@ -10,8 +10,15 @@
       DataContext="{Binding SettingTab, Source={StaticResource ViewModelLocator}}">
 
     <Grid>
-        <TextBlock Text="Setting"
+        <StackPanel Height="450" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Image Margin="0" Source="/Assets/Page.png" Width="400"></Image>
+            <TextBlock Margin="0 0 0 0"
+                   Text="CURRENTLY UNDER DEVELOPMENT"
+                   FontSize="12"
+                   FontFamily="{StaticResource MontserratBold}"
+                   Foreground="#ca3e47"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"/>
+        </StackPanel>
     </Grid>
 </Page>
